--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,15 @@
             <artifactId>Discord4J</artifactId>
             <version>2.6.1</version>
         </dependency>
-        <!-- Allows you to log events from Discord4J -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.4.1</version>
         </dependency>
     </dependencies>
 
