--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>Discord4Lol</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -55,7 +56,7 @@
         </dependency>
     </dependencies>
 
-    <!-- Build JAR => mvn clean compile assembly:single -->
+    <!-- Build JAR => mvn package -->
     <build>
         <plugins>
             <plugin>
